matraum-app/src/app/pages/scan-page/scan-page.component.sass
\:host
  display: grid

#close-camera, #close-qr-info
  position: absolute
  right: 5px
  margin-top: 5px
  padding: 10px

#close-qr-info
  margin-top: -260px
  margin-right: 5px

h1
  width: 100%
  text-align: center
  line-height: 100px
  margin: 0


#live, #canvasTransp
  grid-column: 1
  grid-row: 1
  width: 100%

#canvas
  display: none

.frame
  display: grid
  place-items: center
  width: 100vw
  height: 100vw

.log
  margin: 25px 0
  width: 100%
  text-align: center
  font-weight: 500

#info-frame
  top: 0
  display: grid
  place-items: center
  overflow: hidden
  max-height: 300px
  transition: all 0.3s ease-out
  background-color: white
  margin-top: -300px
  position: relative

  .count
    font-size: 50px

  .amount-actions
    float: right
    display: flex

    p
      margin: 10px
      background-color: lightgreen
      height: 100px
      width: 100px
      line-height: 100px
      border-radius: 50px
      text-align: center

  .action

    span
      margin: 10px
      background-color: lightgreen
      padding: 20px 50px
      text-align: center
      border-radius: 10px

.hide
  max-height: 0px !important
  transition: all 0s !important
  margin-top: 0px !important


.deactivated
  opacity: 0.6

.close-scanner
  text-align: center
  border-radius: 5px
  font-weight: 700
  width: 100%
  display: grid

  span
    text-align: center
    border-radius: 5px
    background-color: #d90404cc
    border: 2px solid #ca0505cc
    color: white
    width: 80%
    padding: 10px 20px
    margin: 0 auto

